# legacy-java-analyzer

./: .gitignore  LICENSE  README.md  legacy-analyze.sh  pyproject.toml
.github/workflows/: ci-release.yml
tools/: legacy_analyzer.py
